feat: extract Person entity from Student, UUID ids, abstract Person, ON DELETE constraints, remove id exposure from DTOs